--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build":"tsc --project ./",
-    "start":"node dist/src/index.js",
+    "build": "tsc --project ./",
+    "start": "node dist/src/index.js",
     "test": "jest",
-    "test-coverage":"npx jest --coverage"
+    "test-coverage": "npx jest --coverage"
   },
   "keywords": [],
   "author": "",
@@ -34,6 +34,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
+    "jest-mock-extended": "^2.0.6",
     "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.16"
   }
