--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon src/server.ts",
     "build": "tsc --project ./",
-    "start": "node dist/src/index.js",
+    "start": "node dist/src/server.js",
     "test": "jest",
     "test-coverage": "npx jest --coverage"
   },
@@ -18,24 +18,28 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-typescript": "^7.17.12",
     "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.1",
-    "@types/node": "^17.0.42",
+    "@types/http-errors": "^1.8.2",
+    "@types/jest": "^28.1.3",
+    "@types/node": "^18.0.0",
+    "@types/supertest": "^2.0.12",
     "babel-jest": "^28.1.1",
     "dotenv": "^16.0.1",
     "jest": "^28.1.1",
-    "prisma": "^3.15.1",
+    "prisma": "^3.15.2",
     "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
+    "typescript": "^4.7.4"
   },
   "dependencies": {
-    "@prisma/client": "^3.15.1",
+    "@prisma/client": "^3.15.2",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.8",
     "bcrypt": "^5.0.1",
     "express": "^4.18.1",
     "jest-mock-extended": "^2.0.6",
+    "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "supertest": "^6.2.3"
   }
 }
