--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon src/server.ts",
+    "dev": "nodemon -r dotenv/config src/server.ts dotenv_config_path=.env.local dotenv_config_debug=true",
     "build": "tsc --project ./",
     "start": "node dist/src/server.js",
     "test": "jest -i",
@@ -35,6 +35,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^8.5.8",
     "bcrypt": "^5.0.1",
+    "dotenv-cli": "^5.1.0",
     "express": "^4.18.1",
     "jest-mock-extended": "^2.0.6",
     "joi": "^17.6.0",
